# claude_code_apex_marketplace

./: .gitignore  README.md
.claude-plugin/: marketplace.json
plugins/_template/: CHANGELOG.md  README.md
plugins/_template/.claude-plugin/: plugin.json
plugins/_template/commands/: example.md
plugins/mcp-opportunity-pipeline/: README.md
plugins/mcp-opportunity-pipeline/.claude-plugin/: config.json  plugin.json
plugins/mcp-opportunity-pipeline/agents/: gap-analyzer.md  marketplace-scraper.md  mcp-builder.md  publisher.md  qa-harness.md  reddit-validator.md  spec-generator.md
plugins/mcp-opportunity-pipeline/commands/: analyze-gaps.md  build.md  critique.md  discover.md  draft.md  ideate.md  make.md  package.md  pivot.md  pre-check.md  publish.md  qa.md  refine.md  run.md  ship.md  spec.md  status.md  validate.md  walkthrough.md
plugins/mcp-opportunity-pipeline/outputs/: .gitkeep  ideate-run-2025-11-25.json
plugins/spec-iterator-mcp/: README.md  pipeline-state.json  spec.md
plugins/spec-iterator-mcp/.claude-plugin/: config.json  plugin.json
plugins/spec-iterator-mcp/agents/: gap-analyzer.md  question-generator.md  requirement-analyzer.md  spec-compiler.md
plugins/spec-iterator-mcp/commands/: answer.md  gaps.md  generate.md  iterate.md  resume.md  start.md  status.md
plugins/spec-iterator-mcp/src/: .gitignore  Dockerfile  LICENSE  README.md  glama.json  index.ts  main.py  middleware.py  models.py  package-lock.json  package.json  prompts.py  prompts.ts  pyproject.toml  smithery.yaml  storage.ts  tsconfig.json  types.ts
(+17 files in other folders)
